<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="687dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/aakanksha_agrawal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/xmlbtn"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="114dp"
        android:text="@string/xml"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jsonbtn"
        android:layout_width="81dp"
        android:layout_height="37dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="574dp"
        android:text="@string/json"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/xmlbtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/data"
        android:layout_width="71dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="508dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/data"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xmlbtn" />

    <LinearLayout
        android:layout_width="345dp"
        android:layout_height="442dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="41dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data">

        <TextView
            android:id="@+id/cityname"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/city_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/longi"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/longitude"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lati"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/latitude"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/temperature"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/humi"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/humidity"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>